# libPS4freetype2

./: CMakeLists.txt  README.md
include/: PS4freetype2.hpp
src/: PS4freetype2.c  PS4freetype2.cpp  PS4freetype2.h
